--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.10",
     "lucide-react": "^0.477.0",
     "next": "^15.2.0",
     "next-themes": "^0.4.4",
